<resources>
    <string name="app_name">DilPay</string>
    <string name="about1">About Dilpay</string>
    <string name="about2">Dilpay is India’s Best online bus ticketing platform that has transformed bus travel in the country by bringing ease and convenience to millions of Indians who travel using buses. Founded in 2019, DilBus is part of India’s leading online travel company . By providing widest choice, superior customer service, lowest prices and unmatched benefits</string>
    <string name="about3">Why Choose Us</string>
    <string name="about4">We provide better service. Give you best offers on trips. We Definitly make you feel happy and satisfy about your trip on our service</string>
    <string name="about5">Our Mission</string>
    <string name="about6">Make Dilpay, Based on customer view best price and beautiful experience and based on our view best service</string>
    <string name="contact1">Get In Touch</string>
    <string name="contact2">For Customer Support and Query, Get in touch with us: Help</string>
    <string name="contact3">Dilpay India Services Pvt.Ltd.</string>
    <string name="contact4">H.no : 3-4-104/1,</string>
    <string name="contact5">Narsimha Nagar Colony,</string>
    <string name="contact6">Mallapur X Road,</string>
    <string name="contact7">Near Shiva Hotel,</string>
    <string name="contact8">Hyderabad Rangareddy-500074,</string>
    <string name="contact9">Telangana</string>
    <string name="contact10">Telephone</string>
    <string name="contact11">(+91)9059143346</string>
    <string name="contact12">Business Inquiries</string>
    <string name="contact13">support@dilpay.com</string>
    <string name="faq1">Get answers to your queries</string>
    <string name="faq2">Online payments with Dilpay</string>
    <string name="qn1">How can I Recharge Mobile and DTH?.</string>
    <string name="ans1">You can recharge your mobile by opening Dilpay.in then select mobile on displayed options and choose your recharge type like Prepaid or Postpaid then enter your mobile number on the given field and select your operator then enter amount for your recharge or if you want to browse plans, just click on View Plans option and select your plan and click on next button then provide your payment details like card details or UPI details for recharge your mobile after providing required information just click on Payment button so your payment processed. If you want to recharge your DTH Service on the given field select your operator, on next filed enter your card number then enter amount for your recharge or if you want to browse plans, just click on View Plans option and select your plan and click on next button then provide your payment details like card details or UPI details for recharge your DTH service after providing required information just click on Payment button so your payment processed same like this you can do Datacard Recharge, Cable Tv Recharge, LandLine Recharge which is a very simple three step process. We advise you to check all the details you entered once before proceed to payment. </string>
    <string name="qn2">What happens when my transaction cancelled?</string>
    <string name="ans2">Dont worry about your transaction cancelled issue. some times the transactions may be cancelled by Server Response Problems, Incorrect Transaction Details, Operator Related Issues.If any money from your account is deducted for failure transactions you dont need to worry as soon as possible we resolve your problem by refunding your deducted amount or else make your transaction successful. We will make every effort to ensure that increase success rate of your transaction.</string>
    <string name="qn3">How can I do Bill Payments?.</string>
    <string name="ans3">Dilpay providing you the one portal for all transactional services. Using Dilpay You can pay your Electricity Bill, Water Bill, Gas Bill Etc., For EX: If you want to pay your Electricity Bill, open Dilpay.in then select Electricity on displayed options in that select your Operator from given list, on the next filed select your state then enter your service number and on the next field enter amount and click on next button then provide your payment details like card details or UPI details for doing your Bill-Payment after providing required information just click on Payment button so your payment processed like this you can proceed to do all your Bill-Payments by Dilpay with 100% success rate and secure and easy process.</string>
    <string name="qn4">What is your Refer and Earn Concept</string>
    <string name="ans4">Yeah.. its Quite difficult to understand but it works extraordinary. Our Main Concept is Dilpay have to beneficial for all its customers who uses our services so for that we implemented a amazing Algorithm which works on the concept of do transaction on Dilpay and benefit your self as well as your near Dilpay customers, So the reward will be like cash back and shared to you and your surround Dilpay customers
<br />FOR EX: if you do any successful transaction on Dilpay the cash back will be credited to you and your neighbours who use Dilpay like that if anyone near you do successful payment then the cash back will credits to you also, if you are a Dilpay customer, the number transaction done by near you so the cash back credited to you on every transaction like that every Dilpay customer will get beneficial.</string>
    <string name="qn5">Is Cash back is Awarded every time?</string>
    <string name="ans5">Yes Obviously! You can get cash back on every transaction you do and also cash back will credited to your account by if someone near you done a transaction.</string>
    <string name="qn6">Is Dilpay Secure for Online Transactions?</string>
    <string name="ans6">Dilpay uses very secure payment gateway and with 100% successful transaction ratio. So you don,t need to worry about transactions on Dilpay.</string>
    <string name="qn7">Is this Services will applicable to all States in India ?</string>
    <string name="ans7">No. At present we are launching these services to Telangana only. Although we have planed to provide this services to all States in India but it take some time.</string>
    <string name="qn8">Did all services from Dilpay will give Cash back?.</string>
    <string name="ans8">Yes. Dilpay will give you Cash back on all the payments services which we provide.</string>
    <string name="qn9">Is it mandatory to create an account in Dilpay?.</string>
    <string name="ans9">Yes. Without Account you cant proceed to do any transaction.</string>
    <string name="qn10">Is My data secure in Dilpay?.</string>
    <string name="ans10">Dilpay will assure you about safety of your information. Dilpay will not misuse your information. We use your information for your online transactions purpose only.</string>
    <string name="pol1">Type of information we collect and its legal basis</string>
    <string name="pol000">By downloading/using/accessing the Dilpay application indicate that you understand, agree and consent to this privacy policy.The Dilpay app is fully designed for business and/or personal use purposes, A user hereby provide your unconditional consent or agreements to the Dilpay</string>
    <string name="pol2">The information as detailed below is collected for us to be able to provide the services chosen by you and also to fulfill our legal obligations as well as our obligations towards third parties as per our User Agreement.</string>
    <string name="pol3">"Personal Information" of User shall include the information shared by the User and collected by us for the following purposes:</string>
    <string name="pol4"> Information which you provide while subscribing to or registering on the Website, including but not limited to information about your personal identity such as name, gender, age etc., your contact details such as your email address, postal addresses, telephone (mobile or otherwise) and/or fax numbers. The information may also include information such as your banking details (including credit/debit card) and any other information relating to your income and/or lifestyle; billing information payment history etc. (as shared by you).</string>
    <string name="pol5"> We many also collect some other information and documents including but not limited to:</string>
    <string name="pol6">1.Transactional history (other than banking details) about your e-commerce activities, buying behavior.</string>
    <string name="pol7">2.Your user names, passwords, email addresses and other security-related information used by you in relation to our Services.</string>
    <string name="pol8">3.Data either created by you or by a third party and which you wish to store on our servers such as image files, documents etc.</string>
    <string name="pol001">"Business Partners" – Shall refer to any individual, group of individuals defined under law with whom Dilpay have a contractual relationship not limited to Merchants, Advertisers, Deal partners, Financial institutions.</string>
    <string name="pol002">"Service Providers" – Refers to any individual, group of individuals defined under law whose services are used by Dilpay in order to provide the intended services to You through Dilpay platforms.</string>
    <string name="pol10">5.Information pertaining any other user(s) for who you make a transaction for(booking, recharge, etc.,) through your registered Dilpay account. In such case, you must confirm and represent that each of the other user(s) for whom a booking or payment has been made, has agreed to have the information shared by you disclosed to us and further be shared by us with the concerned service provider(s).</string>
    <string name="pol11">How we use your personel information</string>
    <string name="pol12">The Personal Information collected maybe used in the following manner:</string>
    <string name="pol13">1.While making a transaction:</string>
    <string name="pol14">While making a transaction, we may use Personal Information including, payment details which include cardholder name, credit/debit card number (in encrypted form) with expiration date, banking details, wallet details etc. as shared and allowed to be stored by you. We may also use the information of travelers list as available in or linked with your account. This information is presented to the User at the time of making a payment to enable you to complete your transaction expeditiously.</string>
    <string name="pol15">2.We may also use your Personal Information for several reasons including but not limited to:</string>
    <string name="pol16">1.keep you informed of the transaction status;</string>
    <string name="pol17">2.Your usernames, passwords, email addresses and other security-related information used by you in relation to our Services.</string>
    <string name="pol18">3.send payment or transaction confirmations either via SMS or notification format or any other messaging service.</string>
    <string name="pol19">4.send any updates or status of your transaction(s).</string>
    <string name="pol20">5.allow our customer service to contact you, if necessary.</string>
    <string name="summary">Use our services &amp; Get percentage to claim your Eligibile Reward Points.</string>
    <string name="mobileRewards">Mobile recharge - 5%</string>
    <string name="defaultRewards">Default rewards - 10%</string>
    <string name="dthRewards">DTH Recharge    - 5%</string>
    <string name="electrictyRewards">Electricity     - 10%</string>
    <string name="gasRewards">Gas		- 5%</string>
    <string name="MoneyRewards">Money Trancefer	- 10%</string>
    <string name="busticketRewards">BusTicket	- 10%</string>
    <string name="referralsRewards">Refferals	-  (1-5%) (2-10%)(3-20%)</string>
    <string name="note">Note: Reward Points will be expired by automatically on 25th of Every Month</string>
</resources>