<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConvertRewards">
    <RelativeLayout
        android:id="@+id/re1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/gradientEnd">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:padding="7dp"
            android:src="@drawable/ic_baseline_chevron_left_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:text="Convert Rewards"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/re1"
        android:layout_margin="5dp"
       app:cardElevation="10dp"
        app:cardCornerRadius="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/availableRewards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="Available Reward Points"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/li_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/availableRewardsAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:textColor="#0071cc"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <TextView
                android:id="@+id/percentageEligibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/availableRewards"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="Percentage Of Eligibility "
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/li1_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/li_amount"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#0071cc"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <TextView
                android:id="@+id/eligibleRewards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/percentageEligibility"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="Eligible Reward Points"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/li2_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/li1_amount"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/eligibleRewardsAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#0071cc"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_details"
        android:layout_marginTop="15dp"
        android:paddingLeft="8dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:paddingEnd="8dp"
        android:background="@drawable/button_bg"
        android:text="Convert Eligible Rewards" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonConvert"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:layout_margin="8dp"
        android:background="@drawable/button_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/summary"
            android:layout_marginTop="15dp"
            android:textColor="@color/textHeading"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/defaultRewards"
            android:layout_marginTop="10dp"
            android:textColor="@color/green"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/mobileRewards"
            android:layout_marginTop="10dp"
            android:textColor="@color/darkGray"
            android:textSize="16sp"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/dthRewards"
            android:textColor="@color/darkGray"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/electrictyRewards"
            android:textColor="@color/darkGray"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/gasRewards"
            android:textColor="@color/darkGray"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/MoneyRewards"
            android:textColor="@color/darkGray"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/busticketRewards"
            android:textColor="@color/darkGray"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/referralsRewards"
            android:textColor="@color/darkGray"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/note"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:textColor="@color/darkGray"
            android:textSize="16sp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progressBGColor"
        android:elevation="10dp"
        android:visibility="gone"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>



</RelativeLayout>